düzelttiğime inanıyorum